--- a/src/embed.html
+++ b/src/embed.html
@@ -24,12 +24,18 @@
       left: 0;
       right: 0;
     }
+
+    .canvas-div{
+      height:100vh;
+      width: 100vw;
+    }
+
   </style>
 </head>
 
 <body>
-  <div style="height: 768px; width: 1024px; background-color: #101010">
-    <div id="canvas-holder" style="height: 100%; background-color: #101010"></div>
+  <div class="canvas-div">
+    <div id="canvas-holder" style="height: 100%; width:100%;"></div>
   </div>
 
 </body>
