--- a/src/embed.html
+++ b/src/embed.html
@@ -3,6 +3,7 @@
 
 <head>
   <script src="standalone.js" async="true" onload="_start()"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <style type="text/css">
     html {
       height: 100%;
@@ -30,10 +31,45 @@
       width: 100vw;
     }
 
+    #loading {
+      position: fixed;
+      display: block;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      text-align: center;
+      background-color: black;
+      z-index: 99;
+    }
+
+    #loading-image {
+      width: 40vw;
+      padding: 0;
+      margin: auto;
+      display: block;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+
+    @media screen and (max-width: 450px) {
+      #loading-image {
+        width: 70vw !important;
+      }
+    }
+
   </style>
 </head>
 
 <body>
+  <div id="loading">
+    <img id="loading-image" src="assets/FgLoadingAPNG.png" alt="Loading..." />
+  </div>
+
   <div class="canvas-div">
     <div id="canvas-holder" style="height: 100%; width:100%;"></div>
   </div>
