--- a/src/play.html
+++ b/src/play.html
@@ -3,6 +3,7 @@
 
 <head>
   <script src="standalone.js" async="true" onload="_start()"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <style type="text/css">
     html {
       height: 100%;
@@ -39,10 +40,44 @@
       width: 60%;
       text-align: center;
     }
+    
+    #loading_player_page {
+      position: fixed;
+      display: block;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      text-align: center;
+      background-color: black;
+      z-index: 99;
+    }
+
+    #loading-image_player_page {
+      width: 25vw;
+      padding: 0;
+      margin: auto;
+      display: block;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+    @media screen and (max-width: 600px) {
+      #loading-image_player_page {
+        width: 70vw;
+      }
+    }
+
   </style>
 </head>
 
 <body>
+  <div id="loading_player_page">
+    <img id="loading-image_player_page" src="assets/FgLoadingAPNG.png" alt="Loading..." />
+  </div>
   <div class="canvas-div">
     <div id="canvas-holder" style="height: 100%;"></div>
   </div>
